Fixed alignment to display properly on mobile devices

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ nav ul li a {
     max-width: 100%;
     height: auto;
     border-radius: 10px;
+    margin-top: 8px;
 }
 
 .about {
@@ -159,5 +160,7 @@ footer a:hover {
 }
 
 .form-container {
-    padding-left: 25%;
+    width: 90%;
+    max-width: 600px;
+    margin: auto;
 }
